[gd_scene load_steps=8 format=3 uid="uid://c4kgccdbt0k2n"]

[ext_resource type="Theme" uid="uid://1cxfhyrtntpc" path="res://Prefabs/Themes/OC_theme.tres" id="1_8tn8e"]
[ext_resource type="Script" uid="uid://bdb6i6dnmo25h" path="res://Scripts/disp_player.gd" id="1_my74u"]
[ext_resource type="Texture2D" uid="uid://xm2nob2jtd5f" path="res://Textures/Crown.png" id="2_xeb2m"]
[ext_resource type="Texture2D" uid="uid://dvr4esoblcqu4" path="res://Textures/AlexIcon.png" id="3_8v02p"]
[ext_resource type="Texture2D" uid="uid://cev4fr0qg5t81" path="res://Textures/Connection_strong.png" id="4_rhkci"]
[ext_resource type="Texture2D" uid="uid://bdunuuhfktocf" path="res://Textures/Connection_OK.png" id="6_w46gj"]
[ext_resource type="Texture2D" uid="uid://cephs3ajp6bv8" path="res://Textures/Connection_poor.png" id="7_2uudw"]

[node name="DispPlayer" type="ColorRect"]
custom_minimum_size = Vector2(0, 80)
offset_right = 807.0
offset_bottom = 80.0
color = Color(0.317647, 0.317647, 0.317647, 1)
script = ExtResource("1_my74u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 330.0
grow_vertical = 2
theme_override_constants/margin_left = 40

[node name="Label" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme = ExtResource("1_8tn8e")
theme_override_font_sizes/font_size = 20
text = "NickDeGamer1"
clip_text = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/HBoxContainer"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
texture = ExtResource("2_xeb2m")
stretch_mode = 5

[node name="KickButton" type="Button" parent="MarginContainer2/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
text = "Kick"

[node name="TextureRect3" type="TextureRect" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_8v02p")
expand_mode = 3

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_8tn8e")
theme_override_font_sizes/font_size = 35

[node name="PingDisplayGreat" type="TextureRect" parent="MarginContainer2/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_rhkci")
expand_mode = 3

[node name="PingDisplayOK" type="TextureRect" parent="MarginContainer2/HBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("6_w46gj")
expand_mode = 3

[node name="PingDisplayPoor" type="TextureRect" parent="MarginContainer2/HBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("7_2uudw")
expand_mode = 3

[connection signal="pressed" from="MarginContainer2/HBoxContainer/KickButton" to="." method="_on_kick_button_pressed"]
